@@ -47,6 +47,10 @@ my @Tests =
      ['h', qw(///),        {OUT => '/'}],
      ['i', qw(///a///),    {OUT => 'a'}],
      ['j', qw(''),         {OUT => ''}],
+     ['k', qw(aa a),       {OUT => 'a'}],
+     ['l', qw(-a a b),     {OUT => "a\nb"}],
+     ['m', qw(-s a aa ba ab),  {OUT => "a\nb\nab"}],
+     ['n', qw(a-a -a),     {OUT => 'a'}],
      ['1', qw(f.s .s),     {OUT => 'f'}],
      ['2', qw(fs s),       {OUT => 'f'}],
      ['3', qw(fs fs),      {OUT => 'fs'}],
